--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,5 +1,5 @@
-mixin bullet-list(bullet_list)
+mixin bullet-list(bulletList)
 
   ul.bullet-list
-    each item in bullet_list
+    each item in bulletList
       li.bullet-list__el= item
