--- a/src/components/rich-checkbox/rich-checkbox.pug
+++ b/src/components/rich-checkbox/rich-checkbox.pug
@@ -1,9 +1,9 @@
 //- Сюда передаётся массив[]
-mixin rich-checkbox(rich_checkbox)
+mixin rich-checkbox(richCheckbox)
   
   
   .rich-checkboxes
-    each item in rich_checkboxes
+    each item in richCheckboxes
       - const {label, description} = item
       .rich-checkbox
         label.rich-checkbox__label
