Start date-dropdown component, install jquery and air-datepicker. Added air-datepicker to date-dropdown

--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -15,13 +15,14 @@
 @import '../../../components/rich-checkbox/rich-checkbox.scss';
 @import '../../../components/bullet-list/bullet-list.scss';
 @import '../../../components/dropdown/dropdown.scss';
+@import '../../../components/date-dropdown/date-dropdown.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 266px;
+  width: 320px;
   margin: 0;
 }
 .test1{
