--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -13,6 +13,7 @@ include ../../../components/pagination/pagination.pug
 include ../../../components/rich-checkbox/rich-checkbox.pug
 include ../../../components/bullet-list/bullet-list.pug
 include ../../../components/dropdown/dropdown.pug
+include ../../../components/date-dropdown/date-dropdown.pug
 
 -
   const details = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
@@ -44,16 +45,19 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="./form-elements.scss")
+    //- <link href="../../../../node_modules/air-datepicker/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./test.js"></script>
+    <script src="../../../../node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
+
     title Form Elements
   body
     .test
-      +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
-    .test1
-      +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
-    .test2
-      +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
-      +expandable-checkbox({title: "sadaaaa", checkboxList: checkboxesToList})
+      +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
       
-      +like-button({count: 15})
-      +like-button({count: 12})
+    .test1
+    .test2
+      //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
+      //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+      //- +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
+      //- +like-button({count: 15})
     script(src="./form-elements.js")
