--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -44,7 +44,8 @@
   &__input{
     outline: none;
     width: 100%;
-    height: 44px;
+    padding-top: 13px;
+    padding-bottom: 11px;
     padding-left: 15px;
     background: #FFFFFF;
     border: 1px solid $dark-shade-25;
