--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -52,12 +52,12 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      //- +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
+      +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
       
     .test1
     .test2
-      +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
-      +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
-      +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
-      +like-button({count: 15})
+      //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
+      //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+      //- +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
+      //- +like-button({count: 15})
     script(src="./index.js")
