--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -16,6 +16,7 @@
 @import '../../../components/bullet-list/bullet-list.scss';
 @import '../../../components/dropdown/dropdown.scss';
 @import '../../../components/date-dropdown/date-dropdown.scss';
+@import '../../../components/calendar/calendar.scss';
 
 body {
   max-width: 1440px;
