add type=button to bottom-buttons

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -23,5 +23,5 @@ mixin dropdown({title, elements, buttons, resultDefault, keyWords= null})
           button.dropdown__plus.dropdown__button.js-dropdown__plus +
       if(buttons)
         .dropdown__bottom-buttons
-          button.dropdown__clear.dropdown__bottom-button.js-dropdown__clear очистить
-          button.dropdown__apply.dropdown__bottom-button.js-dropdown__apply применить
+          button.dropdown__clear.dropdown__bottom-button.js-dropdown__clear(type="button") очистить
+          button.dropdown__apply.dropdown__bottom-button.js-dropdown__apply(type="button") применить
