--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -5,10 +5,10 @@ mixin date-dropdown({title1, title2})
       .date-dropdown__title= title1
       .date-dropdown__wrapper
         .date-dropdown__arrow expand_more
-        input.date-dropdown__input(type= "text", placeholder= "дд.мм.гггг", readonly)
+        input.date-dropdown__input.date-dropdown__input-1( class="datepicker-here", type= "text", placeholder= "дд.мм.гггг", readonly)
     .date-dropdown__date-2
       .date-dropdown__title= title2
       .date-dropdown__wrapper
         .date-dropdown__arrow expand_more
-        input.date-dropdown__input(type= "text", placeholder= "19.08.2019", readonly)
-  .data-dropdown__calendar( class="datepicker-here", data-range="true", data-multiple-dates-separator=" - ")
+        input.date-dropdown__input.date-dropdown__input-2(  type= "text", placeholder= "дд.мм.гггг", readonly)
+  //- .data-dropdown__calendar( class="datepicker-here", data-range="true", data-multiple-dates-separator=" - ")
