--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -57,8 +57,8 @@ html(lang="ru")
       
     .test1
     .test2
-      +filter-date({title: 'filter date dropdown'})
-      //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
+      //- +filter-date({title: 'filter date dropdown'})
+      +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
       //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
       //- +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
       //- +like-button({count: 15})
