--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -46,8 +46,7 @@
     cursor: default;
     outline: none;
     &_expanded{
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
+      border-radius: 4px 4px 0px 0px;
       border-color: $dark-shade-50;
       box-shadow: 0px 10px 20px $dark-shade-05;
     }
@@ -57,10 +56,8 @@
   }
   &__elements{
     border: 1px solid $dark-shade-50;
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
     border-top-width: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
     padding-left: 14px;
     padding-right: 7px;
     position: absolute;
