Added comment component

--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -18,13 +18,14 @@
 @import '../../../components/date-dropdown/date-dropdown.scss';
 @import '../../../components/filter-date/filter-date.scss';
 @import '../../../components/calendar/calendar.scss';
+@import '../../../components/comment/comment.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 320px;
+  width: 711px;
   margin: 0;
 }
 .test1{
