--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -15,6 +15,7 @@ include ../../../components/bullet-list/bullet-list.pug
 include ../../../components/dropdown/dropdown.pug
 include ../../../components/date-dropdown/date-dropdown.pug
 include ../../../components/filter-date/filter-date.pug
+include ../../../components/comment/comment.pug
 
 -
   const details = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
@@ -53,13 +54,14 @@ html(lang="ru")
     title Form Elements
   body
     .test
-      +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
-      
+      +comment({avatar: "../../../components/comment/image/avatar1.png", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
     .test1
     .test2
       //- +filter-date({title: 'filter date dropdown'})
-      +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
+      //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
       //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
       //- +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
-      //- +like-button({count: 15})
+      //- +like-button({count: 15})     
+      //- +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
+
     script(src="./index.js")
