--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -6,14 +6,19 @@
   keyWords - напр: ["гость","гостя","гостей"]. Если задан, результат выводится как сумма всех значений + keyWords (5 гостей).
     если не задан, результат выводится через запятую (1 спальня, 2 кровати).
     
-mixin dropdown({title, elements, buttons, resultDefault, keyWords= null})
+mixin dropdown({title, elements, buttons, resultDefault, keyWords= null, isExpanded})
+
+  -
+    let expanded_mod = ""
+    if(isExpanded)
+      expanded_mod = "_expanded"
 
   .dropdown.js-dropdown(data-default= resultDefault, data-keyWords= keyWords)
     .dropdown__title= title
     .dropdown__wrapper.js-dropdown__wrapper
       .dropdown__arrow expand_more
-      input.dropdown__input.js-dropdown__input(class="dropdown__input_expanded", readonly, type="text", value= resultDefault)
-    .dropdown__elements.js-dropdown__elements(class="dropdown__elements_expanded")
+      input.dropdown__input.js-dropdown__input(class="dropdown__input" + expanded_mod, readonly, type="text", value= resultDefault)
+    .dropdown__elements.js-dropdown__elements(class="dropdown__elements" + expanded_mod)
       each item in elements
         - const {name, nameForms, value= 0, min= 0, max= 5} = item
         .dropdown__element.js-dropdown__element
