--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -8,7 +8,7 @@ include ../../../components/radio-button/radio-button.pug
 include ../../../components/toggle/toggle.pug
 include ../../../components/like-button/like-button.pug
 include ../../../components/button/button.pug
-include ../../../components/big-button/big-button.pug
+include ../../../components/submit-button/submit-button.pug
 include ../../../components/pagination/pagination.pug
 include ../../../components/rich-checkbox/rich-checkbox.pug
 include ../../../components/bullet-list/bullet-list.pug
@@ -47,19 +47,17 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="./form-elements.scss")
-    //- <link href="../../../../node_modules/air-datepicker/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./jquery-in-parcel.js"></script>
     <script src="../../../../node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
 
     title Form Elements
   body
     .test
-      +comment({avatar: "../../../components/comment/image/avatar1.png", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
     .test1
     .test2
       //- +filter-date({title: 'filter date dropdown'})
       //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
-      //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+      //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
       //- +expandable-checkbox({title: "sad", checkboxList: checkboxesToList})
       //- +like-button({count: 15})     
       //- +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
