--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -23,9 +23,9 @@ mixin dropdown({title, elements, buttons, resultDefault, keyWords= null, isExpan
         - const {name, nameForms, value= 0, min= 0, max= 5} = item
         .dropdown__element.js-dropdown__element
           .dropdown__name.js-dropdown__name(data-nameForms= nameForms)= name
-          button.dropdown__minus.dropdown__button.js-dropdown__minus -
+          button.dropdown__minus.dropdown__button.js-dropdown__minus(type="button") -
           .dropdown__count.js-dropdown__count(data-min= min, data-max= max)= value
-          button.dropdown__plus.dropdown__button.js-dropdown__plus +
+          button.dropdown__plus.dropdown__button.js-dropdown__plus(type="button") +
       if(buttons)
         .dropdown__bottom-buttons
           button.dropdown__clear.dropdown__bottom-button.js-dropdown__clear(type="button") очистить
