--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -1,4 +1,5 @@
 include ../../../components/search-room-card/search-room-card.pug
+include ../../../components/sign-up-card/sign-up-card.pug
 
 doctype html
 html(lang="ru")
@@ -13,8 +14,9 @@ html(lang="ru")
     title Cards
   body
     .test
-      +search-room-card()
+      +sign-up-card()
     .test1
     .test2
+      //+search-room-card()
 
     script(src="./index.js")
