--- a/src/pages/UI-kit/cards/cards.scss
+++ b/src/pages/UI-kit/cards/cards.scss
@@ -1,6 +1,7 @@
 @import '../../../scss/fonts.scss';
 @import '../../../scss/colors.scss';
 @import '../../../components/search-room-card/search-room-card.scss';
+@import '../../../components/sign-up-card/sign-up-card.scss';
 
 body {
   max-width: 1440px;
