--- a/src/pages/UI-kit/cards/cards.scss
+++ b/src/pages/UI-kit/cards/cards.scss
@@ -2,6 +2,7 @@
 @import '../../../scss/colors.scss';
 @import '../../../components/search-room-card/search-room-card.scss';
 @import '../../../components/sign-up-card/sign-up-card.scss';
+@import '../../../components/sign-in-card/sign-in-card.scss';
 
 body {
   max-width: 1440px;
