Added cursor: pointer, user-select: none to rate-button.scss

--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -8,4 +8,6 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   color: $purple;
+  cursor: pointer;
+  user-select: none;
 }
