--- a/src/components/sign-in-card/sign-in-card.scss
+++ b/src/components/sign-in-card/sign-in-card.scss
@@ -6,9 +6,7 @@
   background-color: white;
   padding: 40px 30px 30px 30px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
+  border-radius: 4px;;
   &__title{
     font-family: $opensans;
     font-weight: bold;
