--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -1,7 +1,10 @@
+include ../../../components/logo/logo.pug
 include ../../../components/search-room-card/search-room-card.pug
 include ../../../components/sign-up-card/sign-up-card.pug
 include ../../../components/sign-in-card/sign-in-card.pug
 include ../../../components/booking-room-card/booking-room-card.pug
+include ../../../components/rate-button/rate-button.pug
+include ../../../components/room-card/room-card.pug
 
 doctype html
 html(lang="ru")
@@ -15,11 +18,25 @@ html(lang="ru")
 
     title Cards
   body
-    .test
-      +booking-room-card({number: "888", costForDay: "9 990", isLux: true})
-    .test1
-    .test2
-      //- +sign-in-card()
-      +search-room-card()
-      //- +sign-up-card()
+    .logo1
+      +logo
+    .cards
+      .cards__content
+        .cards__column
+          .cards__search-room-card
+            +search-room-card()
+          .cards__sign-up-card
+            +sign-up-card()
+        .cards__column
+          .cards__booking-room-card
+            +booking-room-card({number: "888", costForDay: "9 990", isLux: true})
+          .cards__sign-in-card
+            +sign-in-card()
+        .cards__column
+          .cards__calendar
+            .datepicker-here
+          .cards__room-card
+            +room-card({image: "../../../components/room-card/image/image1.jpg", number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
+          .cards__room-card
+            +room-card({image: "../../../components/room-card/image/image2.jpg", number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
     script(src="./index.js")
