--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -19,13 +19,14 @@
 @import '../../../components/filter-date/filter-date.scss';
 @import '../../../components/calendar/calendar.scss';
 @import '../../../components/comment/comment.scss';
+@import '../../../components/range-slider/range-slider.scss';
 
 body {
   max-width: 1440px;
   margin: 0 auto;
 }
 .test{
-  width: 711px;
+  width: 266px;
   margin: 0;
 }
 .test1{
