Renamed class .logo to .logotype and .logo1 to .logo

--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -19,7 +19,7 @@ include ../../../components/comment/comment.pug
 include ../../../components/range-slider/range-slider.pug
 
 -
-  const details = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
+  const room_details = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
                   {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
                   {materIcon: "whatshot", title: "Уют", description: "Номер оснащён камином"}]
 
