--- a/src/pages/UI-kit/colors-type/colors-type.pug
+++ b/src/pages/UI-kit/colors-type/colors-type.pug
@@ -12,7 +12,7 @@ html(lang="ru")
     link(rel="stylesheet", href="./colors-type.scss")
     title Colors&Type
   body
-    .logo1
+    .logo
       +logo()
     .colors-type
       .blocks-color 
