Changed array to object in mixins

--- a/src/components/abouts-room/abouts-room.pug
+++ b/src/components/abouts-room/abouts-room.pug
@@ -1,5 +1,5 @@
 //- Сюда передаётся массив[]
-mixin abouts-room(roomDetails)
+mixin abouts-room({roomDetails})
 
   .abouts-room  
     each item in roomDetails
