--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,5 +1,5 @@
-//- Сюда передаётся массив[]
-mixin checkbox(checkboxes)
+//- Сюда передаётся массив [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true}]
+mixin checkbox({checkboxes})
 
   .checkboxes
     each item in checkboxes
