--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -19,9 +19,8 @@ include ../../../components/comment/comment.pug
 include ../../../components/range-slider/range-slider.pug
 
 -
-  const room_details = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
-                  {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"},
-                  {materIcon: "whatshot", title: "Уют", description: "Номер оснащён камином"}]
+  const roomDetails = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
+                  {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"}]
 
   const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
 
@@ -35,11 +34,13 @@ include ../../../components/range-slider/range-slider.pug
   
   const bulletList = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
 
-  const dropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
+  const dropdownLeft = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
                     {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
                     {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]
 
-  const dropdown1 = [{name: "Взрослые", value: "0", min: "0", max: "1"},{name: "Дети", value: "1", min: "0", max: "2"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+  const dropdownMid = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+
+  const dropdownRight = [{name: "Взрослые", value: "2", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
 
 doctype html
 html(lang="ru")
@@ -54,10 +55,88 @@ html(lang="ru")
 
     title Form Elements
   body
-    .test
-      +range-slider({title: "range slider"})
-    .test1
-    .test2
+    .logo
+      +logo()
+    .form-elements
+      .form-elements__content
+        .form-elements__left
+          .form-elements__field-default
+            +text-field({title: "text field", placeholder: "Email"})
+          .form-elements__field-focus
+            +text-field({title: "text field", value: "This is pretty awesome"})
+          .form-elements__dropdown-left_big
+            +dropdown({title: "dropdown", elements: dropdownMid, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"]})
+          .form-elements__masked-field
+            +masked-text-field({title: "masked text field", placeholder: "ДД.ММ.ГГГГ"})
+          .form-elements__date-dropdown
+            +date-dropdown({title1: "date dropdown", title2: "date dropdown"})
+          .form-elements__filter-date
+            +filter-date({title: 'filter date dropdown'})
+          .form-elements__subscription
+            +subscription-text-field({title: "subscription text field", placeholder: "Email"})
+          .form-elements__dropdown-left
+            +dropdown({title: "dropdown", elements: dropdownLeft, resultDefault: "Сколько комнат"})
+          .form-elements__dropdown-left.form-elements__dropdown-left_expanded
+            +dropdown({title: "dropdown", elements: dropdownLeft, resultDefault: "Сколько комнат", isExpanded: true})
+          .form-elements__expandable-checkbox
+            +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList})
+          .form-elements__expandable-checkbox.form-elements__expandable-checkbox_expanded
+            +expandable-checkbox({title: "expandable checkbox list", checkboxList: checkboxesToList, isExpanded: true})
+          .form-elements__abouts-room
+            +abouts-room({roomDetails: roomDetails})
+        .form-elements__mid
+          .form-elements__checkbox-text.form-elements__text checkbox buttons
+          .form-elements__checkbox
+            +checkbox({checkboxes: checkboxes})
+          .form-elements__radio-text.form-elements__text radio buttons
+          .form-elements__radio
+            +radio-button({title: "Пол", radioButtons: radButtons})
+          .form-elements__toggle-text.form-elements__text toggle
+          .form-elements__toggle
+            +toggle({label: "Получать спецпредложения", isChecked: true})
+          .form-elements__toggle
+            +toggle({label: "Получать спецпредложения"})
+          .form-elements__like-button-text.form-elements__text like button
+          .form-elements__like-button
+            +like-button({count: "2"})
+          .form-elements__like-button
+            +like-button({count: "12", isLiked: true})
+          .form-elements__rate-button-text.form-elements__text rate button
+          .form-elements__rate-button
+            +rate-button({activeStars: "4"})
+          .form-elements__rate-button
+            +rate-button({activeStars: "5"})
+          .form-elements__dropdown-mid
+            +dropdown({title: "dropdown", elements: dropdownMid, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+          .form-elements__rich-checkbox-text.form-elements__text rich checkbox buttons
+          .form-elements__rich-checkbox
+            +rich-checkbox({richCheckbox: richCheckboxes})
+        .form-elements__right
+          .form-elements__range-slider
+            +range-slider({title: "range slider"})
+          .form-elements__buttons-text.form-elements__text buttons
+          .form-elements__button.form-elements__button_purple
+            +button({color: "purple", place: "inForm", text: "click me"})
+          .form-elements__button.form-elements__button_purple
+            +button({color: "purple", place: "inForm", text: "click me", isDisabled: true})
+          .form-elements__button.form-elements__button_white
+            +button({color: "white", place: "inForm", text: "click me"})
+          .form-elements__button.form-elements__button_white-margin
+            +button({color: "white", place: "inForm", text: "click me", isDisabled: true})
+          .form-elements__button-text.form-elements__button-text_purple click me 
+          .form-elements__button-text.form-elements__button-text_black click me
+          .form-elements__submit-button
+            +submit-button({text: "Перейти к оплате"})
+          .form-elements__pagination-text.form-elements__text pagination
+          .form-elements__pagination
+            +pagination({caption: "1 - 12 из 100+ вариантов аренды"})
+          .form-elements__dropdown-right
+            +dropdown({title: "dropdown", elements: dropdownRight, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
+          .form-elements__bullet-list-text.form-elements__text bullet list
+          .form-elements__bullet-list
+            +bullet-list({bulletList: bulletList})
+        .form-elements__comment
+          +comment({avatar: "../../../components/comment/image/avatar1.png", name: "Мурад Сарафанов", dateText: "5 дней назад", likeButton: {count: 12, isLiked: true}, text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."})      
       //- +filter-date({title: 'filter date dropdown'})
       //- +dropdown({title: "dropdown", elements: dropdown, resultDefault: "Сколько комнат"})
       //- +dropdown({title: "dropdown", elements: dropdown1, buttons: true, resultDefault: "Сколько гостей", keyWords: ["гость","гостя","гостей"], isExpanded: true})
